updating h1 tag with our name

--- a/index.html
+++ b/index.html
@@ -17,17 +17,19 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Some fun facts about me are that I am a trained Pastry Chef of over ten years. I also am a professionoal Origami artist as well. I was feeatured on an 
+        HBO Max show called "Craftopia" for my work.
+      </p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>A rural town called Faribault, Minnesota</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Some of my favorite hobbies are creating artwork, working out, and cooking of course!</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>I would love to do anything with either front or back development.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I currently live a northern suburb of Minneapolis called Blaine, Minnesota.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to be a web developer because this kind of work is interesting to me and I am constantly learning new skills!</p>
     </section>
 
     <footer id="footer">
