updating personal information

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Some fun facts about me are that I am a trained Pastry Chef of over ten years. I also am a professionoal Origami artist as well. I was feeatured on an 
+      <p>Some fun facts about me are that I am a trained Pastry Chef of over ten years. I also am a professional Origami artist as well. I was featured on an 
         HBO Max show called "Craftopia" for my work.
       </p>
       <h1>Where I'm From</h1>
