updating our details

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         HBO Max show called "Craftopia" for my work.
       </p>
       <h1>Where I'm From</h1>
-      <p>A rural town called Faribault, Minnesota</p>
+      <p>I am from a rural town called Faribault, Minnesota.</p>
       <h1>What are your favorite hobbies?</h1>
       <p>Some of my favorite hobbies are creating artwork, working out, and cooking of course!</p>
       <h1>What's your dream job?</h1>
